fix alignment issues with hello grid

--- a/css/style.css
+++ b/css/style.css
@@ -203,14 +203,13 @@ section {
 
 #say-hi-btn {
     font-family: var(--font-mono);
-    font-size: 15px;
     color: var(--blue-gray-0);
     background: var(--blue-gray-1000);
     border: 1px solid var(--blue-gray-800);
     padding: 6px 10px;
     cursor: pointer;
     border-radius: 8px;
-    /* transition: opacity 0.2s ease; */
+    transition: opacity 0.2s ease;
     z-index: 100;
 }
 
